[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum ={ version = "0.8.4" }
tokio ={ version = "1",features = ["full"]}
axum-valid = "0.24.0"
validator = { version = "0.20.0", features = ["derive"] }
garde = "0.22.0"
serde = { version = "1.0", features = ["derive"] }

rbs = { version = "4.6"}
rbatis = { version = "4.6"}
#rbatis = { version = "4.0",features = ["debug_mode"]}
rbdc-mysql={version="4.6"}
rbdc-pool-fast={version="4.6"}

log = "0.4"
log4rs = "1.0"

jsonwebtoken = "9.3.0"

redis = "0.32.3"

thiserror = "2.0.3"
regex = "1.11.1"
config = "0.15.9"
chrono = "0.4.38"
utoipa = {version = "5.4.0", features = ["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"
base64 = "0.22.1"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "timeout", "trace", "validate-request","cors"] }
uuid = { version = "1.17.0", features = ["v4"] }
